# dvfs_thesis

./: .gitignore  .gitingore  README.md  problem-formulation.md  static-lu-cholesky.md
.kanban/: config
.kanban/tasks/: TASK-001.md  TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md
.nwave/: des-config.json
chens_code/: 07-cholesky.cu  EnergyMonitor.py  NCU_metrics.sh  cholesky_calibration.sh
containers/: container.def
jobs/001-hello-world/: hello_world.sh
jobs/003-test-hello-world/: run.sbatch  status.json
jobs/004-test-container/: run.sbatch  slurm-137344.err  status.json
jobs/005-test-container2/: run.sbatch  slurm-137345.err  slurm-137345.out  status.json
jobs/006-test-container3/: run.sbatch  slurm-137346.err  status.json
jobs/007-test-container/: run.sbatch  slurm-137347.err  slurm-137347.out  status.json
jobs/008-test-other-users-dotsif/: slurm-137354.out  status.json
jobs/009-test-other-users-dotsif/: run.sbatch  status.json
jobs/010-run-benchmark/: run.sbatch  status.json
jobs/011-run-benchmark/: run.sbatch  status.json
jobs/012-run-benchmark/: run.sbatch  slurm-137432.err  status.json
jobs/013-run-benchmark-local_path/: run.sbatch  slurm-137447.out  status.json
jobs/014-experiment-run-profiler/: run.sbatch  slurm-137452.err  status.json
jobs/015-experiment-run-profiler/: slurm-137454.err  slurm-137454.out  status.json
jobs/016-experiment-run-profiler-no-sudo/: run.sbatch  slurm-137455.err  slurm-137455.out  status.json
jobs/017-experiment-run-profiler-clean-paths/: run.sbatch  status.json
jobs/018-experiment-run-profiler-clean-paths/: run.sbatch  slurm-137458.err  slurm-137458.out  status.json
jobs/019-experiment-run-profiler-remote-venv/: run.sbatch  slurm-137468.err  slurm-137468.out  status.json
jobs/020-experiment-run-profiler-remote-venv/: run.sbatch  slurm-137470.err  slurm-137470.out  status.json
jobs/021-experiment-remote-venv-outside-apptainer/: run.sbatch  status.json
jobs/022-experiment-remote-venv-outside-apptainer/: status.json
jobs/023-experiment-collapse-profiling-outputs-into-slurm-output/: run.sbatch  slurm-137476.err  slurm-137476.out  status.json
jobs/024-experiment-collapse-profiling-outputs-into-slurm-output-fixed-waits/: run.sbatch  slurm-137477.out  status.json
jobs/025-experiment-check-available-clocks/: run.sbatch  slurm-137480.out  status.json
jobs/026-experiment-check-available-clocks/: run.sbatch  slurm-137481.out  status.json
jobs/027-experiment-set-and-verify-clocks/: run.sbatch  slurm-137483.out  status.json
jobs/028-experiment-set-and-verify-clocks-use-persistence-mode/: status.json
jobs/029-experiment-set-and-verify-clocks-use-set-permission/: run.sbatch  slurm-137486.out  status.json
jobs/030-experiment-set-and-verify-clocks-use-set-permission-for-real-this-time/: run.sbatch  slurm-137488.out  status.json
jobs/031-experiment-set-and-verify-clocks-use-energymonitor/: run.sbatch  slurm-137494.err  slurm-137494.out  status.json
jobs/032-experiment-set-and-verify-clocks-use-energymonitor-change-path/: run.sbatch  status.json
jobs/033-experiment-set-and-verify-clocks-use-energymonitor-concat-logs/: run.sbatch  slurm-138430.out  status.json
jobs/034-experiment-set-and-verify-clocks-use-energymonitor-change-perms/: run.sbatch  slurm-138518.out  status.json
jobs/035-check-available-memory-frequencies/: run.sbatch  slurm-138611.out  status.json
jobs/036-experiment-set-and-verify-clocks-use-energymonitor-persistence-mode]/: status.json
jobs/037-experiment-set-and-verify-clocks-use-sudo-E/: slurm-139112.out  status.json
jobs/038-experiment-set-and-verify-clocks-use-sudo-Ex2/: slurm-139467.err  status.json
jobs/038-experiment-set-and-verify-clocks-use-sudo-after-permissions/: run.sbatch  slurm-139467.err  slurm-139467.out  slurm-141698.out  status.json
jobs/039-experiment-set-and-verify-clocks-use-sudo-E-after-permissions-change/: run.sbatch  slurm-141699.out  status.json
jobs/040-experiment-4gpus-baseline-2040mhz/: run.sbatch  status.json
jobs/041-experiment-4gpus-baseline-2040mhz-n4800-t16-r5/: slurm-142371.out  status.json
jobs/042-experiment-4gpus-baseline-2040mhz-n4800-t16-r5-only-LU/: slurm-160525.err  slurm-160525.out  status.json
jobs/043-experiment-4gpus-baseline-2040mhz-n4800-t16-r5-detailed-timers/: run.sbatch  slurm-160534.err  slurm-160534.out  status.json
jobs/043-experiment-4gpus-baseline-2040mhz-n4800-t16-r5-only-LU-nvshmem-time/: run.sbatch  slurm-160526.err  slurm-160526.out  status.json
jobs/045-experiment-4gpus-baseline-2040mhz-n4800-t16-r5-detailed-timers-n9600/: run.sbatch  slurm-160538.out  status.json
jobs/046-experiment-4gpus-baseline-2040mhz-n4800-t16-r5-wall-time-n9600/: slurm-161652.out  status.json
jobs/047-print-subgraphs/: run.sbatch  status.json
jobs_broker_delivery/: DEPLOYMENT_GUIDE.md  broker_common.py  gsync.sh  gsync_broker.py  gsync_worker.py  gsync_worker.sh
mustard/: .clang-format  CMakeLists.txt  build_mustard.sh
mustard/baselines/cusolver_Mg/: CMakeLists.txt  cusolver_MgGetrf_example.cu  cusolver_MgPotrf_example.cu
mustard/baselines/slate/: CMakeLists.txt  trubamake.sh
mustard/baselines/starpu/cholesky/: CMakeLists.txt  Makefile_truba  cholesky.h
mustard/baselines/starpu/common/: blas.h  blas_model.h
mustard/baselines/starpu/lu/: CMakeLists.txt  lu-double.h  lu_example.c  xlu.h
mustard/include/: argh.h  cli.h  cusolverMg_utils.h  cusolver_utils.h  gen.h  gpu_debug.h  nvshmem_kernels.h  utils.h  verify.h
mustard/mustard/: CMakeLists.txt  allocator.h  broker_queue.h  cg_mustard.cu  cholesky_graph_builder.h  cholesky_mustard.cu  injectors.h  lu_mustard.cu  lu_mustard_p.cu  mustard.h  pe_writer.h  pingpong_mustard.cu  scheduler.h  test_timer.cu  time_utils.cuh
mustard/mustard/single_gpu/: chol.cu  lu.cu
result-processing/: claude-requirements.txt  display_runtimes.py  extract_freqs.sh  fix_csv_parenthesis.sh  parse_benchmark.py  parse_benchmarks_output.py  plot.py  theoretical_edp.py  utilz.py
slurm_job_history/: result_160368.out  result_160370.out  result_160371.out
(+270 files in other folders)
